feat: add light/dark mode switching functionality, add loading overlay when calling the API and update seat selection logic to match provided API